ci(docker): updating docker release strategy
updating release strategy for docker, to reduce the amount of time it takes to release by leveraging maven build process and cache.

removed some of the java ops and debug ops due to possible conflicts with java 17.